--- a/public/css/admin/style.css
+++ b/public/css/admin/style.css
@@ -1,11 +1,11 @@
 .tb-title {
     text-transform: uppercase;
-    color: #1E2F54;
+    color: #1e2f54;
 }
 
 .card-data {
     color: white;
-    background-color: #809EE0;
+    background-color: #809ee0;
     margin-bottom: 20px;
     border: none;
 }
@@ -16,6 +16,6 @@
 
 .btn-a:active,
 .btn-a:focus {
-  outline: none;
-  box-shadow: none;
+    outline: none;
+    box-shadow: none;
 }
